--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "^4.6.1",
+    "socket.io-prometheus-v3": "^1.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
