--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
-    "express": "^4.21.2",
+    "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "^4.6.1",
-    "socket.io-prometheus-v3": "^1.0.3",
+    "socket.io-prometheus": "^0.3.0",
+    "prom-client": "^14.2.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
