--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "prettier": "2.2.1",
     "prom-client": "^14.2.0",
     "socket.io": "^4.6.1",
