--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,8 @@
 version: 2
 updates:
-  - package-ecosystem: npm
-    directory: /
+  - package-ecosystem: "npm"
+    directory: "/" 
     schedule:
-      interval: weekly
-      day: sunday
+      interval: "weekly"
+      day: "sunday"
       time: "01:00"
