--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@excalidraw/eslint-config": "1.0.3",
     "@excalidraw/prettier-config": "1.0.2",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.1",
     "@types/node": "22.13.11",
@@ -14,6 +15,7 @@
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-prettier": "5.2.3",
     "express": "^4.21.2",
+    "ioredis": "^5.7.0",
     "prettier": "3.5.3",
     "prom-client": "^15.1.3",
     "socket.io": "^4.6.1",
