--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@types/debug": "4.1.12",
     "@types/express": "5.0.3",
     "@types/node": "22.13.11",
-    "@typescript-eslint/eslint-plugin": "8.27.0",
-    "@typescript-eslint/parser": "8.41.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "cross-env": "10.0.0",
     "debug": "4.4.0",
     "dotenv": "^16.4.7",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
-    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-prettier": "^5.5.4",
     "express": "5.1.0",
     "ioredis": "^5.7.0",
     "prettier": "3.5.3",
