--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "express": "5.1.0",
     "ioredis": "^5.7.0",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
     "prom-client": "^15.1.3",
     "socket.io": "^4.6.1",
     "socket.io-adapter": "^2.5.4",
