t push t status t -c core.editor=true rebase --continue t rebase --skip chore: Major improvements - GitHub Actions v4, dev dependencies, health check, Docker security & releases
- Update GitHub Actions from v3 to v4 in all workflows
- Properly separate dev and production dependencies
- Add /health endpoint for Docker/Kubernetes with Redis status
- Optimize Dockerfile with healthcheck, cache cleaning, and non-root user
- Add Docker security scanning workflow with Trivy
- Add manual release workflow with automatic versioning and changelog

--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
+    "debug": "4.4.3",
+    "dotenv": "^17.2.2",
+    "express": "5.2.1",
+    "ioredis": "^5.9.2",
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.8.3",
+    "socket.io-adapter": "^2.5.6"
+  },
+  "devDependencies": {
     "@excalidraw/eslint-config": "1.0.3",
     "@excalidraw/prettier-config": "1.0.2",
-    "@socket.io/redis-adapter": "^8.3.0",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.6",
     "@types/node": "24.6.2",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.45.0",
     "cross-env": "10.0.0",
-    "debug": "4.4.3",
-    "dotenv": "^17.2.2",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
-    "express": "5.2.1",
-    "ioredis": "^5.9.2",
     "prettier": "^3.8.0",
-    "prom-client": "^15.1.3",
-    "socket.io": "^4.8.3",
-    "socket.io-adapter": "^2.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "5.9.2"
   },
