fix: disable npm publish in semantic-release config

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -48,7 +48,12 @@
         "changelogFile": "CHANGELOG.md"
       }
     ],
-    "@semantic-release/npm",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
     [
       "@semantic-release/git",
       {
