--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "25.0.9",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.53.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
