--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -69,11 +69,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: |
+            ghcr.io/${{ github.repository }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/rita-room
           tags: |
             type=semver,pattern={{version}},value=${{ needs.release.outputs.new-release-version }}
             type=semver,pattern={{major}}.{{minor}},value=${{ needs.release.outputs.new-release-version }}
