--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,6 +32,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -47,7 +48,7 @@ jobs:
         with:
           images: |
             ghcr.io/${{ steps.repo.outputs.repo }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/rita-room
+            ${{ secrets.DOCKERHUB_USERNAME != '' && format('{0}/rita-room', secrets.DOCKERHUB_USERNAME) || '' }}
           tags: |
             type=raw,value=${{ inputs.version }}
             type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
