--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -70,11 +70,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        if: ${{ secrets.DOCKERHUBNAME != '' && secrets.DOCKERHUBPWD != '' }}
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUBNAME }}
+          password: ${{ secrets.DOCKERHUBPWD }}
 
       - name: Extract metadata
         id: meta
@@ -82,7 +82,7 @@ jobs:
         with:
           images: |
             ghcr.io/${{ github.repository }}
-            ${{ secrets.DOCKERHUB_USERNAME != '' && format('{0}/rita-room', secrets.DOCKERHUB_USERNAME) || '' }}
+            ${{ secrets.DOCKERHUBNAME != '' && format('{0}/rita-room', secrets.DOCKERHUBNAME) || '' }}
           tags: |
             type=semver,pattern={{version}},value=${{ needs.release.outputs.new-release-version }}
             type=semver,pattern={{major}}.{{minor}},value=${{ needs.release.outputs.new-release-version }}
