--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,11 +32,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        if: ${{ secrets.DOCKERHUBNAME != '' && secrets.DOCKERHUBPWD != '' }}
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUBNAME }}
+          password: ${{ secrets.DOCKERHUBPWD }}
 
       - name: Convert repository name to lowercase
         id: repo
@@ -48,7 +48,7 @@ jobs:
         with:
           images: |
             ghcr.io/${{ steps.repo.outputs.repo }}
-            ${{ secrets.DOCKERHUB_USERNAME != '' && format('{0}/rita-room', secrets.DOCKERHUB_USERNAME) || '' }}
+            ${{ secrets.DOCKERHUBNAME != '' && format('{0}/rita-room', secrets.DOCKERHUBNAME) || '' }}
           tags: |
             type=raw,value=${{ inputs.version }}
             type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
