--- a/.github/workflows/docker-security.yml
+++ b/.github/workflows/docker-security.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
+        continue-on-error: true
         with:
           image-ref: 'rita-room:${{ github.sha }}'
           format: 'sarif'
@@ -44,7 +45,7 @@ jobs:
 
       - name: Upload Trivy results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: always() && hashFiles('trivy-results.sarif') != ''
         with:
           sarif_file: 'trivy-results.sarif'
 
