--- a/.github/workflows/dependabot-auto-release.yml
+++ b/.github/workflows/dependabot-auto-release.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      pull-requests: write
+      actions: write
     
     steps:
       - name: Checkout code
